apps/nautobot/base/00-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: nautobot
  labels:
    kubernetes.io/metadata.name: nautobot
    argocd.argoproj.io/managed-by: openshift-gitops
    pod-security.kubernetes.io/enforce: restricted
    pod-security.kubernetes.io/audit: restricted
    pod-security.kubernetes.io/warn: restricted
