apps/nautobot/base/route.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nautobot
  namespace: nautobot
  annotations:
    cert-manager.io/cluster-issuer: cloudflare-prod
    route.openshift.io/termination: edge
    route.openshift.io/insecure-policy: Redirect
spec:
  ingressClassName: openshift-default
  tls:
    - hosts:
        - ipmgmt.sigtom.dev
      secretName: ipmgmt-sigtom-tls
  rules:
    - host: ipmgmt.sigtom.dev
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: nautobot
                port:
                  name: http
